K8S/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
  # namespace: application
spec:
  rules:
  - host: www.example.com
    http:
      paths:
      - backend:
          service:
            name: weather
            port:
              number: 8000
        path: /
        pathType: Exact  # Prefix

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
  # namespace: application
spec:
  rules:
    http:
      paths:
      - backend:
          service:
            name: weather
            port:
              number: 8000
        path: /
        pathType: Exact  # Prefix
